// Original file: proto/route_guide.proto


export interface RouteSummary {
  'pointCount'?: (number);
  'featureCount'?: (number);
  'distance'?: (number);
  'elapsedTime'?: (number);
}

export interface RouteSummary__Output {
  'pointCount': (number);
  'featureCount': (number);
  'distance': (number);
  'elapsedTime': (number);
}
